rxjs-compat fix

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -45,8 +45,7 @@
 
             <button mat-raised-button
                     color="accent"
-                    disabled
-                    (click)="postService.open()">
+                    disabled>
 
                 <mat-icon>add_comment</mat-icon>
 
