--- a/src/app/login/register/register.component.html
+++ b/src/app/login/register/register.component.html
@@ -37,8 +37,7 @@
             <button mat-button mat-dialog-close>Cancel</button>
 
             <button mat-button
-                    [disabled]="!formGroup.valid"
-                    (click)="register()">
+                    [disabled]="!formGroup.valid">
 
                 Register
 
