--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -45,11 +45,11 @@
 
             <button mat-raised-button
                     color="accent"
-                    disabled>
+                    [routerLink]="['/questions']">
 
                 <mat-icon>add_comment</mat-icon>
 
-                Create Post
+                Questions
 
             </button>
 
